[gd_scene load_steps=21 format=3 uid="uid://cf70atxem4i7a"]

[ext_resource type="Script" uid="uid://cssq6depb51dw" path="res://chunk.gd" id="1_kdh3y"]
[ext_resource type="TileSet" uid="uid://cpra0q1m00ecn" path="res://resources/terrain/GroundTiles.tres" id="2_e81nj"]
[ext_resource type="TileSet" uid="uid://baqvve5g684u7" path="res://resources/terrain/props.tres" id="3_5lkun"]
[ext_resource type="TileSet" uid="uid://ddc701j8tin6a" path="res://resources/terrain/Vegetation.tres" id="4_44qyl"]
[ext_resource type="Shader" uid="uid://n0wmq3uun33u" path="res://foliage.gdshader" id="5_eoxb4"]
[ext_resource type="Script" uid="uid://biehv4j6l5mqw" path="res://grass.gd" id="7_5lkun"]
[ext_resource type="TileSet" uid="uid://bw2pxa6p1te7a" path="res://resources/terrain/Trees.tres" id="7_aj7hh"]
[ext_resource type="TileSet" uid="uid://c0rqasl3vlxu5" path="res://resources/terrain/HouseTiles.tres" id="8_5lkun"]
[ext_resource type="TileSet" uid="uid://o2c82v8m0hts" path="res://resources/terrain/HouseInterior.tres" id="8_aj7hh"]
[ext_resource type="TileSet" uid="uid://dsym70gbg4cyp" path="res://resources/terrain/HouseOutline.tres" id="10_aj7hh"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_aj7hh"]
vertices = PackedVector2Array(950, 950, 10, 950, 10, 10, 950, 10)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, 0, 960, 0, 960, 960, 0, 960)])
source_geometry_mode = 2
source_geometry_group_name = &"bake"
agent_radius = 1.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hvwml"]
noise_type = 0
frequency = 0.0208

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_e81nj"]
seamless = true
noise = SubResource("FastNoiseLite_hvwml")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eoxb4"]
shader = ExtResource("5_eoxb4")
shader_parameter/render_noise = false
shader_parameter/noise_texture = SubResource("NoiseTexture2D_e81nj")
shader_parameter/amplitude = 0.01
shader_parameter/time_scale = 0.02
shader_parameter/noise_scale = 0.001
shader_parameter/rotation_strength = 0.1
shader_parameter/rotation_pivot = Vector2(0.5, 1.75)

[sub_resource type="Shader" id="Shader_ipac1"]
code = "shader_type canvas_item;

uniform bool render_noise = false;
uniform sampler2D noise_texture : repeat_enable; // set in inspector
uniform float amplitude : hint_range(0.0, 0.5, 0.01) = 0.2;
uniform float time_scale : hint_range(0.0, 5.0, 0.01) = 0.04;
uniform float noise_scale : hint_range(0.0, 2.0, 0.0001) = 0.001;
uniform float rotation_strength : hint_range(0.0, 1.0, 0.05) = 1;
uniform vec2 rotation_pivot = vec2(0.5, 1);
uniform float distance_cutoff : hint_range(0.0, 1.0, 0.05) = 0.3;
varying vec2 world_position;

void vertex(){
    world_position = (MODEL_MATRIX * vec4(VERTEX, 0.0, 1.0)).xy;
}

vec2 get_sample_pos(vec2 pos, float scale, float offset) {
	pos *= scale;
	pos += offset;
	return pos;
}

vec2 rotate_vec(vec2 vec, vec2 pivot, float rotation) {
	float cosa = cos(rotation);
	float sina = sin(rotation);
	vec -= pivot;
	return vec2(
		cosa * vec.x - sina * vec.y,
		cosa * vec.y + sina * vec.x
	) + pivot;
}

vec2 get_pixelated_uvs(vec2 uv, vec2 texture_pixel_size) {
    vec2 texture_dimensions = 1.0 / texture_pixel_size;
    vec2 pixel_coords = uv * texture_dimensions;
    vec2 snapped_pixel_coords = vec2(round(pixel_coords.x), round(pixel_coords.y));
    vec2 pixelated_uv = snapped_pixel_coords / texture_dimensions;
	return pixelated_uv;
}

void fragment() {
	vec2 uv = get_pixelated_uvs(UV, TEXTURE_PIXEL_SIZE);

	// get noise from texture
	vec2 noise_sample_pos = get_sample_pos(uv, noise_scale, TIME * time_scale);
	float noise_amount = texture(noise_texture, noise_sample_pos).r - 0.5f;

	// get rotation position around a pivot
	float rotation = amplitude * noise_amount;
	vec2 rotated_uvs = rotate_vec(uv, rotation_pivot, rotation);

	// blend original uvs and rotated uvs based on distance to pivot
	float dist = distance(uv, rotation_pivot);
	dist = clamp(dist, distance_cutoff, 1) * rotation_strength - distance_cutoff;
	vec2 result_uvs = mix(uv, rotated_uvs, dist);

	// output color
	COLOR = texture(TEXTURE, result_uvs);

	// optional, preview noise texture for debugging
	if (render_noise) {
		vec4 noise_color = texture(noise_texture, noise_sample_pos);
		COLOR = noise_color;
	}
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_eoxb4"]
noise_type = 0
frequency = 0.0208

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hndgg"]
seamless = true
noise = SubResource("FastNoiseLite_eoxb4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_44qyl"]
shader = SubResource("Shader_ipac1")
shader_parameter/render_noise = false
shader_parameter/noise_texture = SubResource("NoiseTexture2D_hndgg")
shader_parameter/amplitude = 0.07
shader_parameter/time_scale = 0.04
shader_parameter/noise_scale = 0.5293
shader_parameter/rotation_strength = 0.5
shader_parameter/rotation_pivot = Vector2(0.5, 1)
shader_parameter/distance_cutoff = 1.0

[sub_resource type="TileSet" id="TileSet_aj7hh"]
tile_size = Vector2i(24, 24)

[sub_resource type="LabelSettings" id="LabelSettings_e81nj"]
font_size = 176

[node name="Chunk" type="Node2D" node_paths=PackedStringArray("notifier", "map", "ground", "ground2", "vegetation", "trees", "props", "building", "building_outline", "interiorWall", "exteriorWall", "floor", "roof")]
y_sort_enabled = true
script = ExtResource("1_kdh3y")
tile_size = 24
notifier = NodePath("VisibiltyNotifier")
map = NodePath("Map")
ground = NodePath("Map/Ground")
ground2 = NodePath("Map/Ground2")
vegetation = NodePath("Map/Vegetation")
trees = NodePath("Map/Trees")
props = NodePath("Map/Props")
building = NodePath("Building")
building_outline = NodePath("Building/BuildingOutline")
interiorWall = NodePath("Building/BuildingInteriorWalls")
exteriorWall = NodePath("Building/BuildingExteriorWalls")
floor = NodePath("Building/BuildingFloor")
roof = NodePath("Building/Roof")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_aj7hh")

[node name="Map" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Ground" type="TileMapLayer" parent="Map" groups=["bake"]]
tile_set = ExtResource("2_e81nj")

[node name="Ground2" type="TileMapLayer" parent="Map" groups=["bake"]]
tile_set = ExtResource("2_e81nj")

[node name="Props" type="TileMapLayer" parent="Map" groups=["bake"]]
y_sort_enabled = true
tile_set = ExtResource("3_5lkun")

[node name="Vegetation" type="TileMapLayer" parent="Map" groups=["bake"]]
y_sort_enabled = true
material = SubResource("ShaderMaterial_eoxb4")
tile_set = ExtResource("4_44qyl")
script = ExtResource("7_5lkun")

[node name="Trees" type="TileMapLayer" parent="Map" groups=["bake"]]
y_sort_enabled = true
material = SubResource("ShaderMaterial_44qyl")
tile_set = ExtResource("7_aj7hh")

[node name="Building" type="Node2D" parent="."]
y_sort_enabled = true

[node name="BuildingInteriorWalls" type="TileMapLayer" parent="Building" groups=["bake"]]
y_sort_enabled = true
tile_set = ExtResource("8_aj7hh")

[node name="BuildingExteriorWalls" type="TileMapLayer" parent="Building" groups=["bake"]]
y_sort_enabled = true
tile_set = ExtResource("8_5lkun")

[node name="BuildingFloor" type="TileMapLayer" parent="Building" groups=["bake"]]
tile_set = ExtResource("8_aj7hh")

[node name="BuildingOutline" type="TileMapLayer" parent="Building" groups=["bake"]]
y_sort_enabled = true
tile_set = ExtResource("10_aj7hh")

[node name="Roof" type="TileMapLayer" parent="Building" groups=["bake"]]
z_index = 1
y_sort_enabled = true
tile_set = SubResource("TileSet_aj7hh")

[node name="VisibiltyNotifier" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(0, 0, 960, 960)

[node name="Label" type="Label" parent="."]
offset_left = 18.0
offset_top = 23.0
offset_right = 956.0
offset_bottom = 958.0
text = "Awwww"
label_settings = SubResource("LabelSettings_e81nj")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="screen_entered" from="VisibiltyNotifier" to="." method="_on_visibilty_notifier_screen_entered"]
[connection signal="screen_exited" from="VisibiltyNotifier" to="." method="_on_visibilty_notifier_screen_exited"]
